# cadence-fog-monitor

./: .gitignore  LICENSE  README.md  START_HERE.md  Show Last Capture.command  Show Recording.command
build_guide/: start_here.html
colab/: cadence_plots.ipynb  cadence_plots_upload.ipynb  colab_setup.py  export_fog_tflite.py  fog_allinone.py  fog_interpret.py  gen_device_coeffs.py  pick_threshold.py
deliverables/: build_benchcard.js  build_handout.js  build_leaflet_fog.js  cadence_benchcard.pptx  cadence_leaflet_fog.pptx  results_handout.pptx
hardware/: coding_flowchart.py  sleeve_layout.py  wiring_pinout.tex
pi/: HOW_TO_DISPLAY.txt  accuracy_worksheet.tex  analyze_tremor.py  analyze_worksheet.py  capture_report.py  capture_worksheet.py  cpx_download.html  cpx_dump.py  cpx_to_daphnet.py  dashboard.html  dashboard_server.py  demo_display.sh  fi_detector.py  fog_analysis.py  fog_common.py  fog_episodes.csv  fog_model.pth  fog_norm.npz  has_freeze.py  infer_capture.py  make_accuracy_figs.py  make_cnn_figs.py  make_decision_figs.py  plot_capture.py  predict_vs_truth.py  pyproject.toml  requirements.txt  run_live.sh  s3_dashboard_bridge.py  software_segment_script.tex  stream_demo.py  train_fog.py  tremor_detector.py
pi/accuracy_figs/: ankle_run_windows.csv  capture1_windows.csv  figures.tex  smoketest_windows.csv
pi/accuracy_figs/smoketest_out/: smoketest_windows.csv
pi/fog/: __init__.py  config.py  detect.py  dsp.py  metrics.py  model.py  normalize.py  streaming.py
pi/tests/: conftest.py  test_biquad_equiv.py  test_cue.py  test_dsp.py  test_gate.py  test_metrics.py  test_model.py  test_normalize.py  test_streaming.py
recordings/: allzero_inferred.html  ankle_run.csv  ankle_run.daphnet.txt  badphase_inferred.html  capture1.csv  capture_20260605_024319.csv  capture_20260605_024319.daphnet.txt  capture_20260605_031535.csv  capture_20260605_031535.daphnet.txt  capture_20260605_071458.csv  capture_20260605_075334.csv  capture_20260605_075334.daphnet.txt  capture_20260605_093444.csv  capture_20260605_103351.csv  capture_20260605_103351_inferred.html  capture_20260605_131133.csv  capture_20260605_142407.csv  capture_20260605_143204.csv  capture_20260605_145511.csv  capture_20260605_154322.csv  capture_20260605_154322.daphnet.txt  constant_inferred.html  edge_allzero_inferred.html  edge_freelog_inferred.html  freelog_inferred.html  freelog_test_inferred.html  one_phase_inferred.html  one_window_inferred.html  smoke_live.csv  smoke_live_inferred.html  smoketest.csv  smoketest.daphnet.txt  smoketest_inferred.html  stream1.csv  stream2.csv
(+40 files in other folders)
